# BaseLibraries

./: .gitignore  .readthedocs.yaml  BaseDefines.hpp  BaseDefinesC.hpp  BaseDefinesJSON.hpp  CMakeLists.txt  README.md  cmagnet.py  pyproject.toml
000_thirdparty/Eigen/: Cholesky  IterativeLinearSolvers  LU  QR
000_thirdparty/Eigen/src/AccelerateSupport/: AccelerateSupport.h
000_thirdparty/Eigen/src/Cholesky/: LDLT.h  LLT_LAPACKE.h
000_thirdparty/Eigen/src/Core/: ArithmeticSequence.h  Array.h  Block.h  ConditionEstimator.h  CoreEvaluators.h  CoreIterators.h  CwiseNullaryOp.h  CwiseUnaryView.h  DenseCoeffsBase.h  DenseStorage.h  DiagonalMatrix.h  Dot.h  EigenBase.h  ForceAlignedAccess.h  GenericPacketMath.h  GlobalFunctions.h  Inverse.h  Map.h  MapBase.h  MathFunctionsImpl.h  Matrix.h  MatrixBase.h  NestByValue.h  PermutationMatrix.h  PlainObjectBase.h  ProductEvaluators.h  Reshaped.h  Reverse.h  SelfAdjointView.h  SelfCwiseBinaryOp.h  Solve.h  SolveTriangular.h  SolverBase.h  StableNorm.h  StlIterators.h  Swap.h  Transpose.h  Transpositions.h  TriangularMatrix.h  VectorBlock.h  (+1 more)
000_thirdparty/Eigen/src/Eigenvalues/: ComplexEigenSolver.h  ComplexSchur_LAPACKE.h  HessenbergDecomposition.h  SelfAdjointEigenSolver.h  SelfAdjointEigenSolver_LAPACKE.h  Tridiagonalization.h
000_thirdparty/Eigen/src/Geometry/: AlignedBox.h  AngleAxis.h  OrthoMethods.h  Rotation2D.h  RotationBase.h  Translation.h  Umeyama.h
000_thirdparty/Eigen/src/Householder/: Householder.h  HouseholderSequence.h
000_thirdparty/Eigen/src/IterativeLinearSolvers/: IncompleteLUT.h  SolveWithGuess.h
000_thirdparty/Eigen/src/LU/: Determinant.h  FullPivLU.h  InverseImpl.h  PartialPivLU_LAPACKE.h
000_thirdparty/Eigen/src/OrderingMethods/: Amd.h
000_thirdparty/Eigen/src/PardisoSupport/: PardisoSupport.h
000_thirdparty/Eigen/src/QR/: ColPivHouseholderQR_LAPACKE.h  FullPivHouseholderQR.h  HouseholderQR_LAPACKE.h
000_thirdparty/Eigen/src/SVD/: JacobiSVD_LAPACKE.h  SVDBase.h  UpperBidiagonalization.h
000_thirdparty/Eigen/src/SparseCore/: SparseBlock.h  SparseCompressedBase.h  SparseCwiseBinaryOp.h  SparseCwiseUnaryOp.h  SparseMatrixBase.h  SparsePermutation.h  SparseRedux.h  SparseTriangularView.h  SparseView.h  TriangularSolver.h
000_thirdparty/Eigen/src/SparseLU/: SparseLUImpl.h  SparseLU_Memory.h  SparseLU_Utils.h  SparseLU_column_dfs.h  SparseLU_copy_to_ucol.h  SparseLU_heap_relax_snode.h  SparseLU_kernel_bmod.h  SparseLU_panel_bmod.h  SparseLU_pivotL.h  SparseLU_pruneL.h
000_thirdparty/Eigen/src/StlSupport/: StdDeque.h  StdVector.h  details.h
000_thirdparty/Eigen/src/misc/: Image.h  lapacke_helpers.h
000_thirdparty/Eigen/src/plugins/: ArrayCwiseBinaryOps.h  ArrayCwiseUnaryOps.h  BlockMethods.h  CommonCwiseBinaryOps.h
000_thirdparty/Eigen_dev/: AccelerateSupport  Core  SPQRSupport  SparseCore
000_thirdparty/Eigen_dev/src/Cholesky/: LLT.h
000_thirdparty/Eigen_dev/src/CholmodSupport/: CholmodSupport.h
000_thirdparty/Eigen_dev/src/Core/: ArrayBase.h  ArrayWrapper.h  Assign.h  AssignEvaluator.h  Assign_MKL.h  BandMatrix.h  BooleanRedux.h  CommaInitializer.h  CwiseBinaryOp.h  CwiseTernaryOp.h  CwiseUnaryOp.h  DenseBase.h  Diagonal.h  DiagonalProduct.h  Fuzzy.h  GeneralProduct.h  IO.h  IndexedView.h  MathFunctions.h  NoAlias.h  NumTraits.h  PartialReduxEvaluator.h  Product.h  Random.h  Redux.h  Ref.h  Replicate.h  ReturnByValue.h  Select.h  Stride.h  VectorwiseOp.h
000_thirdparty/Eigen_dev/src/Eigenvalues/: ComplexSchur.h  EigenSolver.h  GeneralizedEigenSolver.h  GeneralizedSelfAdjointEigenSolver.h  MatrixBaseEigenvalues.h  RealQZ.h  RealSchur.h  RealSchur_LAPACKE.h
000_thirdparty/Eigen_dev/src/Geometry/: EulerAngles.h  Homogeneous.h  Hyperplane.h  ParametrizedLine.h  Quaternion.h  Scaling.h  Transform.h
000_thirdparty/Eigen_dev/src/Householder/: BlockHouseholder.h
000_thirdparty/Eigen_dev/src/IterativeLinearSolvers/: BasicPreconditioners.h  BiCGSTAB.h  ConjugateGradient.h  IncompleteCholesky.h  IterativeSolverBase.h  LeastSquareConjugateGradient.h
000_thirdparty/Eigen_dev/src/Jacobi/: Jacobi.h
000_thirdparty/Eigen_dev/src/KLUSupport/: KLUSupport.h
000_thirdparty/Eigen_dev/src/LU/: PartialPivLU.h
000_thirdparty/Eigen_dev/src/MetisSupport/: MetisSupport.h
000_thirdparty/Eigen_dev/src/OrderingMethods/: Ordering.h
000_thirdparty/Eigen_dev/src/PaStiXSupport/: PaStiXSupport.h
000_thirdparty/Eigen_dev/src/QR/: ColPivHouseholderQR.h  CompleteOrthogonalDecomposition.h  HouseholderQR.h
000_thirdparty/Eigen_dev/src/SPQRSupport/: SuiteSparseQRSupport.h
000_thirdparty/Eigen_dev/src/SVD/: BDCSVD.h  JacobiSVD.h
000_thirdparty/Eigen_dev/src/SparseCholesky/: SimplicialCholesky.h  SimplicialCholesky_impl.h
000_thirdparty/Eigen_dev/src/misc/: Kernel.h  (+1 more)
000_thirdparty/UnsupportedEigen/Eigen/: AdolcForward  AlignedVector3  ArpackSupport  AutoDiff  BVH  CMakeLists.txt  EulerAngles  FFT  IterativeSolvers  KroneckerProduct  LevenbergMarquardt  MPRealSupport  MatrixFunctions  MoreVectorization  NNLS  NonLinearOptimization  NumericalDiff  OpenGLSupport  Polynomials  Skyline  SparseExtra  SpecialFunctions  Splines
000_thirdparty/nlohmann/: json.hpp
BasicFuncs/: CMakeLists.txt  CommonFuncs.cpp  CommonFuncs.hpp  Mt.cpp  Mt.hpp  WaveFormModifier.cpp
SparseMat/: CMakeLists.txt  MatSolvers.hpp  MatSolversABMCICCG.cpp  MatSolversABMCICCG.hpp  MatSolversEigenMKL.hpp  MatSolversICCG.hpp  MatSolvers_ABMCICCG.cpp  MatSolvers_ABMCICCG.hpp  MatSolvers_Eigen.cpp  MatSolvers_ICCG.cpp  MatSolvers_ICCOCG.cpp  MatSolvers_MKL.cpp  SparseMat.cpp  SparseMat.hpp  SparseMatC.cpp  SparseMatC.hpp  SparseMatOperators.cpp  SparseMatOperators.hpp  SparseMatPy.cpp  SparseMatTMPL.hpp  main.cpp
SparseMat/temporary/: ABMCICCG_botsu.cpp  ABMCICCG_botsu.hpp  ABMCICCG_pre.cpp  ABMCICCG_pre.hpp
docs/: requirements.txt
docs/source/: BaseLibraries.md  Basic.md  ForDev.md  GetStart.md  README.md  SparseMat.md  UserSample.md  conf.py  index.rst  test2.md
examples/example_abmc/: CMakeLists.txt  main.cpp
examples/example_basic_funcs/: CMakeLists.txt  main.cpp
examples/example_sparse_mat/: CMakeLists.txt  main.cpp
(+223 files in other folders)
